[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kryptorious-csvclean"
version = "1.1.0"
description = "CSV file cleaner and validator — detect encoding, inconsistent delimiters, missing headers, duplicates, type mismatches."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Kryptorious Quantum Biosciences, Inc."}]
dependencies = ["click>=8.0", "rich>=13.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
csvclean = "csvclean.cli:main"

[project.urls]
Homepage = "https://devflow.sh"

[tool.setuptools.packages.find]
where = ["src"]
